--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 
 
 body{
-    background-color: rgb(114, 114, 219);
+    background-color: rgb(156, 156, 224);
     max-width: 480px;
     border: solid;
 }
@@ -22,6 +22,11 @@ li{
     margin: 0px 12px;
     width: 200px;
     text-align: center;
+    height: 50px;
 }
-
+.campos{
+    width: 130px;
+    height: 35px;
+    font-size: 25px;
+}
 
